--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,9 +25,9 @@
         <main>
             <div class="row mt-lg-5">
                 <div class="col-lg-6 px-lg-5 px-4 my-auto">
-                    <div class="mx-lg-5">
+                    <div class="mx-lg-5 " data-aos="fade-up">
                         <div>
-                            <h1 class="py-2">
+                            <h1 class="py-2 ">
                                 Food from your favorite vendor delivered to you.
                             </h1>
                             <p>
@@ -41,7 +40,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 my-auto">
-                    <div class="">
+                    <div class="" data-aos="fade-down">
                         <div class="bg"></div>
                         <img id="img1" src="./chop-img/eiliv-sonas-aceron-ZuIDLSz3XLg-unsplash 1.png" alt="" />
                     </div>
@@ -50,11 +49,11 @@
         </main>
     </div>
     <main>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center my-5">
             <div class="col-12 text-center my-5 why-use">
                 <h1>Why Use Chop</h1>
             </div>
-            <div class="col-lg-3 mr-lg-5">
+            <div class="col-lg-3 mr-lg-5" data-aos="fade-right">
                 <div class="card p-1">
                     <div class="d-flex py-3">
                         <img id="icons" src="./chop-img/8689341141557740367 1.png" alt="" />
@@ -65,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mx-lg-5">
+            <div class="col-lg-3 mx-lg-5" data-aos="fade-left">
                 <div class="card p-1">
                     <div class="d-flex py-3">
                         <img id="icons" src="./chop-img/4494221631582884294 1.png" alt="" />
@@ -76,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mx-lg-5">
+            <div class="col-lg-3 mx-lg-5" data-aos="fade-down">
                 <div class="card p-1">
                     <div class="d-flex py-3">
                         <img id="icons" src="./chop-img/18030926061578463644 1.png" alt="" />
@@ -89,10 +88,10 @@
             </div>
         </div>
     </main>
-    <main>
-        <div class="play-store mx-lg-5 mt-5">
-            <div class="row mt-5 p-3">
-                <div class="col-lg-3 mx-auto px-auto">
+    <main class="my-5">
+        <div class="play-store mx-lg-5 mt-5 p-4">
+            <div class="row mt-5">
+                <div class="col-lg-3 mx-auto px-auto" data-aos="fade-up-right">
                     <img id="img2" src="./chop-img/Rectangle.png" alt="" />
                 </div>
                 <div class="col-lg-4 pt-5 mr-auto">
@@ -109,22 +108,82 @@
         <div class="row mt-5">
             <div class="col-lg-5 mx-auto mt-5 text-center">
                 <h2>Be the first to get notified on new features</h2>
-                <div class="mt-4">
+                <div class="mt-4 ">
                     <input style="background-color: rgba(45, 64, 89, 0.15)" type="text" placeholder="Enter your email address">
-                    <input style="background-color: #FFC107;" type="button" value="Subscribe">
+                    <input style="background-color: #BE1931; color: white;" type="button" value="Subscribe">
                 </div>
             </div>
         </div>
     </main>
     <main>
         <div class="steps mt-5">
-            <div class="row p-4">
-                <div class="col-12 text-center">
-                    <h2>Easy like one, two three</h2>
+            <div class="row p-4 mt-5 justify-content-center">
+                <div class="col-12 text-center p-5">
+                    <h2>Easy like one, two and three</h2>
+                </div>
+                <div class="col-lg-3 mx-4" data-aos="fade-up-left">
+                    <h1 class="rounded bg-dark p-3 text-center text-white">1</h1>
+                    <p>Download the chop mobile app from playstore or any other app store</p>
+                </div>
+                <div class="col-lg-3 mx-4" ata-aos="fade-down-right">
+                    <h1 class="rounded bg-dark p-3 text-center text-white">2</h1>
+                    <p>Create a user or vendor account to get started</p>
+                </div>
+                <div class="col-lg-3 mx-4" ata-aos="fade-down-left">
+                    <h1 class="rounded bg-dark p-3 text-center text-white">3</h1>
+                    <p>Immediately have access to food ordering services.</p>
                 </div>
             </div>
         </div>
     </main>
+    <main>
+        <div class="vendors ">
+            <div class="row p-4 mt-5 justify-content-center">
+                <div class="col-12 text-center p-5">
+                    <h2>Our Vendors</h2>
+                    <p>Delivered directly to you by our vendors</p>
+                </div>
+                <div class="col-lg-3 mx-3" ata-aos="fade-up-right">
+                    <img src="./chop-img/pizza-img.png" alt="">
+                    <div class="text-center p-3 font-weight-bold">
+                        <p>Dominos Pizza</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 mx-3" ata-aos="fade-down-right">
+                    <img src="./chop-img/velvet-cake.png" alt="">
+                    <div class="text-center p-3 font-weight-bold">
+                        <p>Yummy Bakers</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 mx-3" ata-aos="fade-up-left">
+                    <img src="./chop-img/choco-cake.png" alt="">
+                    <div class="text-center p-3 font-weight-bold">
+                        <p>Phantashia Small Chops</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="row justify-content-center footer p-3">
+        <div class="p-2">
+            <i class="bi bi-facebook"></i>
+        </div>
+        <div class="p-2">
+            <i class="bi bi-twitter"></i>
+        </div>
+        <div class="p-2">
+            <i class="bi bi-instagram"></i>
+        </div>
+        <div class="col-12 text-center py-2">
+            <p>All right reserved || Chop 2021</p>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
