--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-3 mx-auto px-auto" data-aos="fade-up-right">
                     <img id="img2" src="./chop-img/Rectangle.png" alt="" />
                 </div>
-                <div class="col-lg-4 pt-5 mr-auto">
+                <div class="col-lg-4 pt-5 mr-auto" data-aos="fade-down-left">
                     <h1>Order, Track and pay in the chop app</h1>
                     <p class="py-3">
                         Download our app to see all features. User friendly and technologically up to data
@@ -125,11 +125,11 @@
                     <h1 class="rounded bg-dark p-3 text-center text-white">1</h1>
                     <p>Download the chop mobile app from playstore or any other app store</p>
                 </div>
-                <div class="col-lg-3 mx-4" ata-aos="fade-down-right">
+                <div class="col-lg-3 mx-4" data-aos="fade-down-right">
                     <h1 class="rounded bg-dark p-3 text-center text-white">2</h1>
                     <p>Create a user or vendor account to get started</p>
                 </div>
-                <div class="col-lg-3 mx-4" ata-aos="fade-down-left">
+                <div class="col-lg-3 mx-4" data-aos="fade-down-left">
                     <h1 class="rounded bg-dark p-3 text-center text-white">3</h1>
                     <p>Immediately have access to food ordering services.</p>
                 </div>
@@ -137,25 +137,25 @@
         </div>
     </main>
     <main>
-        <div class="vendors ">
+        <div class="vendors">
             <div class="row p-4 mt-5 justify-content-center">
                 <div class="col-12 text-center p-5">
                     <h2>Our Vendors</h2>
                     <p>Delivered directly to you by our vendors</p>
                 </div>
-                <div class="col-lg-3 mx-3" ata-aos="fade-up-right">
+                <div class="col-lg-3 mx-3" data-aos="fade-up-right">
                     <img src="./chop-img/pizza-img.png" alt="">
                     <div class="text-center p-3 font-weight-bold">
                         <p>Dominos Pizza</p>
                     </div>
                 </div>
-                <div class="col-lg-3 mx-3" ata-aos="fade-down-right">
+                <div class="col-lg-3 mx-3" data-aos="fade-up-left">
                     <img src="./chop-img/velvet-cake.png" alt="">
                     <div class="text-center p-3 font-weight-bold">
                         <p>Yummy Bakers</p>
                     </div>
                 </div>
-                <div class="col-lg-3 mx-3" ata-aos="fade-up-left">
+                <div class="col-lg-3 mx-3" data-aos="fade-up-right">
                     <img src="./chop-img/choco-cake.png" alt="">
                     <div class="text-center p-3 font-weight-bold">
                         <p>Phantashia Small Chops</p>
@@ -182,7 +182,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 1000
+        });
     </script>
 </body>
 
