--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+
     <title>Chop</title>
 </head>
 
@@ -25,7 +26,7 @@
         <main>
             <div class="row mt-lg-5">
                 <div class="col-lg-6 px-lg-5 px-4 my-auto">
-                    <div class="mx-lg-5 " data-aos="fade-up">
+                    <div class="mx-lg-5 " data-aos="zoom-in">
                         <div>
                             <h1 class="py-2 ">
                                 Food from your favorite vendor delivered to you.
@@ -40,7 +41,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 my-auto">
-                    <div class="" data-aos="fade-down">
+                    <div class="" data-aos="zoom-out">
                         <div class="bg"></div>
                         <img id="img1" src="./chop-img/eiliv-sonas-aceron-ZuIDLSz3XLg-unsplash 1.png" alt="" />
                     </div>
@@ -53,7 +54,7 @@
             <div class="col-12 text-center my-5 why-use">
                 <h1>Why Use Chop</h1>
             </div>
-            <div class="col-lg-3 mr-lg-5" data-aos="fade-right">
+            <div class="col-lg-3 mr-lg-5" data-aos="zoom-in-right">
                 <div class="card p-1">
                     <div class="d-flex py-3">
                         <img id="icons" src="./chop-img/8689341141557740367 1.png" alt="" />
@@ -64,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mx-lg-5" data-aos="fade-left">
+            <div class="col-lg-3 mx-lg-5" data-aos="zoom-in-up">
                 <div class="card p-1">
                     <div class="d-flex py-3">
                         <img id="icons" src="./chop-img/4494221631582884294 1.png" alt="" />
@@ -75,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mx-lg-5" data-aos="fade-down">
+            <div class="col-lg-3 mx-lg-5" data-aos="zoom-in-down">
                 <div class="card p-1">
                     <div class="d-flex py-3">
                         <img id="icons" src="./chop-img/18030926061578463644 1.png" alt="" />
@@ -88,8 +89,9 @@
             </div>
         </div>
     </main>
+
     <main class="my-5">
-        <div class="play-store mx-lg-5 mt-5 p-4">
+        <div class="play-store mx-lg-5 mt-5 p-4" data-aos="zoom-out-up">
             <div class="row mt-5">
                 <div class="col-lg-3 mx-auto px-auto" data-aos="fade-up-right">
                     <img id="img2" src="./chop-img/Rectangle.png" alt="" />
@@ -104,6 +106,7 @@
             </div>
         </div>
     </main>
+
     <main>
         <div class="row mt-5">
             <div class="col-lg-5 mx-auto mt-5 text-center">
@@ -115,75 +118,82 @@
             </div>
         </div>
     </main>
+
     <main>
         <div class="steps mt-5">
             <div class="row p-4 mt-5 justify-content-center">
                 <div class="col-12 text-center p-5">
                     <h2>Easy like one, two and three</h2>
                 </div>
-                <div class="col-lg-3 mx-4" data-aos="fade-up-left">
-                    <h1 class="rounded bg-dark p-3 text-center text-white">1</h1>
+                <div class="col-lg-3 mx-4" data-aos="zoom-out-up">
+                    <h1 id="rounded" class=" bg-dark p-3 text-center text-white">1</h1>
                     <p>Download the chop mobile app from playstore or any other app store</p>
                 </div>
-                <div class="col-lg-3 mx-4" data-aos="fade-down-right">
-                    <h1 class="rounded bg-dark p-3 text-center text-white">2</h1>
+                <div class="col-lg-3 mx-4" data-aos="zoom-out-down">
+                    <h1 id="rounded" class=" bg-dark p-3 text-center text-white">2</h1>
                     <p>Create a user or vendor account to get started</p>
                 </div>
-                <div class="col-lg-3 mx-4" data-aos="fade-down-left">
-                    <h1 class="rounded bg-dark p-3 text-center text-white">3</h1>
+                <div class="col-lg-3 mx-4" data-aos="zoom-out-right">
+                    <h1 id="rounded" class="bg-dark p-3 text-center text-white ">3</h1>
                     <p>Immediately have access to food ordering services.</p>
                 </div>
             </div>
         </div>
     </main>
+
     <main>
-        <div class="vendors">
-            <div class="row p-4 mt-5 justify-content-center">
-                <div class="col-12 text-center p-5">
+        <div class="vendors ">
+            <div class="row p-4 mt-5 justify-content-center ">
+                <div class="col-12 text-center p-5 ">
                     <h2>Our Vendors</h2>
                     <p>Delivered directly to you by our vendors</p>
                 </div>
-                <div class="col-lg-3 mx-3" data-aos="fade-up-right">
-                    <img src="./chop-img/pizza-img.png" alt="">
-                    <div class="text-center p-3 font-weight-bold">
+                <div class="col-lg-3 mx-3 " data-aos="zoom-out">
+                    <img src="./chop-img/pizza-img.png " alt=" ">
+                    <div class="text-center p-3 font-weight-bold ">
                         <p>Dominos Pizza</p>
                     </div>
                 </div>
-                <div class="col-lg-3 mx-3" data-aos="fade-up-left">
-                    <img src="./chop-img/velvet-cake.png" alt="">
-                    <div class="text-center p-3 font-weight-bold">
+                <div class="col-lg-3 mx-3 " data-aos="zoom-out-down">
+                    <img src="./chop-img/velvet-cake.png " alt=" ">
+                    <div class="text-center p-3 font-weight-bold ">
                         <p>Yummy Bakers</p>
                     </div>
                 </div>
-                <div class="col-lg-3 mx-3" data-aos="fade-up-right">
-                    <img src="./chop-img/choco-cake.png" alt="">
-                    <div class="text-center p-3 font-weight-bold">
+                <div class="col-lg-3 mx-3 " data-aos="zoom-out-right">
+                    <img src="./chop-img/choco-cake.png " alt=" ">
+                    <div class="text-center p-3 font-weight-bold ">
                         <p>Phantashia Small Chops</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="row justify-content-center footer p-3">
-        <div class="p-2">
-            <i class="bi bi-facebook"></i>
+
+    <footer class="row justify-content-center footer p-3 ">
+        <div class="p-2 ">
+            <i class="bi bi-facebook "></i>
         </div>
-        <div class="p-2">
-            <i class="bi bi-twitter"></i>
+        <div class="p-2 ">
+            <i class="bi bi-twitter "></i>
         </div>
-        <div class="p-2">
-            <i class="bi bi-instagram"></i>
+        <div class="p-2 ">
+            <i class="bi bi-instagram "></i>
         </div>
-        <div class="col-12 text-center py-2">
+        <div class="col-12 text-center py-2 ">
             <p>All right reserved || Chop 2021</p>
         </div>
     </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx " crossorigin="anonymous "></script>
     <script>
         AOS.init({
-            duration: 1000
+            duration: 1000,
+            once: false,
+            mirror: false,
+            easing: 'ease-out-sine'
         });
     </script>
 </body>
