--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <div class="d-flex justify-content-between px-lg-5 px-4 py-3">
                 <h5 class="ml-lg-5 pt-2">CHOP</h5>
-                <p class="download-btn p-2 px-3 mr-lg-5 text-white">Download Now</p>
+                <p class="download-btn p-2 px-3 mr-lg-5 text-white">Download App</p>
             </div>
         </header>
         <main>
@@ -28,14 +28,14 @@
                 <div class="col-lg-6 px-lg-5 px-4 my-auto">
                     <div class="mx-lg-5 " data-aos="zoom-in">
                         <div>
-                            <h1 class="py-2 ">
+                            <h1 class="py-lg-2 py-3 pt-lg-0 pt-5">
                                 Food from your favorite vendor delivered to you.
                             </h1>
                             <p>
                                 order food from your favourite vendors around your location and get it delivered within minutes.
                             </p>
                             <p class="download download-btn p-lg-2 p-3 px-3 text-white">
-                                Download Now
+                                Download App
                             </p>
                         </div>
                     </div>
